--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -1,16 +1,64 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="UTF-8">
-        <title>{% block title %}Welcome!{% endblock %}</title>
-        <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text></svg>">
-        {% block stylesheets %}
-        {% endblock %}
+	<head>
+		<meta charset="UTF-8">
+		
+        <title>
+			{% block title %}Cagnot'potes
+			{% endblock %}
+        </title>
+		<link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text></svg>">
+		{% block stylesheets %}
+			<!--Import Google Icon Font-->
+			<link
+			href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+			<!--Import materialize.css-->
+			<link
+			type="text/css" rel="stylesheet" href="/assets/css/materialize.min.css" media="screen,projection"/>
+			<!--Custom styles-->
+			<link type="text/css" rel="stylesheet" href="/assets/css/styles.css" media="screen,projection"/>
+		{% endblock %}
 
-        {% block javascripts %}
-        {% endblock %}
-    </head>
-    <body>
-        {% block body %}{% endblock %}
-    </body>
+		
+	</head>
+	<body>
+	{% block body %}{% endblock %}
+
+	<footer class="page-footer teal">
+		<div class="container">
+			<div class="row">
+				<div class="col l6 s12">
+					<h5 class="white-text">Cagnot'Potes</h5>
+					<p class="grey-text text-lighten-4">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam scelerisque id nunc nec volutpat. Etiam pellentesque tristique arcu, non consequat magna fermentum ac. Cras ut ultricies eros. Maecenas eros justo.</p>
+				</div>
+				<div class="col l3 s12 offset-l3">
+					<h5 class="white-text">Liens</h5>
+					<ul class="footer-links">
+						<li>
+							<a class="white-text" href="#!">Comment ça marche ?</a>
+						</li>
+						<li>
+							<a class="white-text" href="#!">Voir les campagnes</a>
+						</li>
+						<li>
+							<a class="white-text" href="#!">Créer une campagne</a>
+						</li>
+					</ul>
+				</div>
+			</div>
+		</div>
+		<div class="footer-copyright">
+			<div class="container">
+				Made with love by
+				<a class="white-text" href="http://trombi.simplon-roanne.com/">Simplon Roanne</a>
+			</div>
+		</div>
+	</footer>
+    {% block javascripts %}
+			<!--JavaScript at end of body for optimized loading-->
+			<script type="text/javascript" src="/assets/js/materialize.min.js"></script>
+			<!--Init & custom scripts-->
+			<script type="text/javascript" src="/assets/js/scripts.js"></script>
+	{% endblock %}
+	</body>
 </html>
